[add] 修改readMe&增加测试&增加react使用的注入

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -3,10 +3,12 @@ name: Button
 route: /
 ---
 
-import DITest from './test/DITest.tsx';
-import DIFuncTestComponent from './test/DIFuncTestComponent';
+import DITest from '../test/DITest.tsx';
+import DIFuncTestComponent from '../test/DIFuncTestComponent';
+import DIClassTestComponent from '../test/DIClassTestComponent';
 
 # DIComponent
 
 <DITest />
 <DIFuncTestComponent />
+<DIClassTestComponent />
